--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,12 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-auth:1.2.0'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.google.firebase:firebase-database:10.2.1'
+    compile 'com.google.firebase:firebase-crash:10.2.1'
+    compile 'com.google.firebase:firebase-messaging:10.2.1'
     testCompile 'junit:junit:4.12'
 }
+
+
 
 
 
