--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,10 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.2.1'
     compile 'com.google.firebase:firebase-crash:10.2.1'
     compile 'com.google.firebase:firebase-messaging:10.2.1'
+    compile 'com.google.firebase:firebase-invites:10.2.1'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
